New Features:

QoL Improvements:
	- Junker will now auto sell soulbound items that are 25 or more item levels lower than you.
	
Additions:
	- Added the drafting table in Talador to the player choice automation.

Updates:
	
Fixes:
	- Fixed an issue that prevented the emote automation from emoting at Gor'groth on Exile's Reach.
	- Fixed the currency ID for Corrupted Mementos when interacting with the Titan Research Archive.
	
Removed: